RESOLVED FIXED269095
REGRESSION(274302@main): TestWebKitAPI.SiteIsolation.DragEvents fails consistently
https://bugs.webkit.org/show_bug.cgi?id=269095
Summary REGRESSION(274302@main): TestWebKitAPI.SiteIsolation.DragEvents fails consist...
Sihui Liu
Reported 2024-02-09 14:01:15 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-09 14:01:48 PST
Sihui Liu
Comment 2 2024-02-09 14:22:04 PST
EWS
Comment 3 2024-02-09 16:47:51 PST
Committed 274402@main (6f21c67b38ae): <https://commits.webkit.org/274402@main> Reviewed commits have been landed. Closing PR #24173 and removing active labels.
Alexey Proskuryakov
Comment 4 2024-02-12 15:16:51 PST
*** Bug 269094 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.