REGRESSION(274302@main): TestWebKitAPI.SiteIsolation.DragEvents fails consistently https://bugs.webkit.org/show_bug.cgi?id=269095 rdar://problem/122668523

Reviewed by Alex Christensen.

Set exposed content rect on iOS family only as macOS does not rely on that for compositing update, see
RenderLayerCompositor::visibleRectForLayerFlushing().

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updateFrameSize):

Canonical link: https://commits.webkit.org/274402@main